--- a/src/assets/css/input.css
+++ b/src/assets/css/input.css
@@ -8,7 +8,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  @apply overflow-x-hidden;
-}
